created deeper package structure to prevent cross-inheritance from unrelated tests